== Revision history of libcerf, maintained by Joachim Wuttke ==

libcerf-1.15, released 10jun21:
  - Use assertion in voigt_hwhm to check for impossible situations
      (to avoid fprintf and exit, as suggested by Ethan A Merritt)
  - Added widthtest, which tests voigt_hwhm for numerous ratios gamma/sigma
  - libcerf.pc.in: correct prefix (as suggested by Alexander Grund)
  - CMake install
    - make full use of CMAKE_INSTALL_<dir> variables
    - DESTINATION now given by LIBDIR from GNUInstallDirs
  - Support CPack for all platforms

libcerf-1.14, released 19oct20:
  - Simplified test code
  - Homepage moved to https://jugit.fz-juelich.de/mlz/libcerf, 17mar19

libcerf-1.13, released 28feb19:
  - Further adjustments for compilation under Windows

libcerf-1.12, released 7feb19:
  - Require CMake 3.6, outcomment code that requires 3.13.
  - Relative paths in CMake sources, for use as subproject.
  - When compiling as CPP, then #include<complex>, not <complex.h>;
    revise the entire C-vs-CPP machinery.
  - Remove tests with different inf or nan results on different systems or under
    different compilers.

libcerf-1.11, released 28dec18:
  - Cover voigt by test_voigt.
  - Implement new function voigt_hwhm.
  - Restore libcerf.pc.
  - Add INSTALL instructions, and other minor adjustments for use of libcerf in C++ projects.
  - Support 'ctest', which runs the numeric accuracy tests from test1.c.
  - Rename type cmplx into _cerf_cmplx to avoid name clash with Gnuplot pre 5.3.

libcerf-1.8 [2oct18], libcerf-1.9 [16oct18] and libcerf-1.10 [20dec18]
  MUST NOT BE USED
  - A bug introduced in v1.8 had broken the normalization of the Voigt function.
  - The git history leading to v1.10 has been rewritten, starting anew from v1.7

libcerf-1.7, released 26sep18:
  - Option -DCERF_CPP allows to choose C++ compilation, which is useful
    because MS VisualStudio supports C++14, but not yet C99, and in
    particular does not support complex.h under C.
